WebCore: Fix for https://bugs.webkit.org/show_bug.cgi?id=34185 REGRESSION: Mask not invalidating

Reviewed by Simon Fraser and Darin Adler.

SVGMaskElement is the only class that keeps a HashMap of canvas
resources rather than just a pointer to a resource. This
patch makes SVGMaskElement invalidate all of its resources in the
HashMap instead of just one.

* svg/SVGMaskElement.cpp:
(WebCore::SVGMaskElement::svgAttributeChanged):
(WebCore::SVGMaskElement::childrenChanged):
(WebCore::SVGMaskElement::invalidateCanvasResources):
* svg/SVGMaskElement.h:
* svg/SVGStyledElement.cpp:
(WebCore::SVGStyledElement::invalidateResourcesInAncestorChain):
(WebCore::SVGStyledElement::invalidateCanvasResources):
* svg/SVGStyledElement.h:

LayoutTests: Test for https://bugs.webkit.org/show_bug.cgi?id=34185 REGRESSION:
Mask not invalidating

Reviewed by Simon Fraser and Darin Adler.

* platform/mac/svg/custom/mask-invalidation-expected.checksum: Added.
* platform/mac/svg/custom/mask-invalidation-expected.png: Added.
* platform/mac/svg/custom/mask-invalidation-expected.txt: Added.
* svg/custom/mask-invalidation.svg: Added.



Canonical link: https://commits.webkit.org/45948@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@54638 268f45cc-cd09-0410-ab3c-d52691b4dbfc