WebCore/svg/SVGStyledElement.h
@@ -71,6 +71,8 @@ namespace WebCore {
     protected: 
         static int cssPropertyIdForSVGAttributeName(const QualifiedName&);
 
+        virtual void invalidateCanvasResources();
+
     private:
         DECLARE_ANIMATED_PROPERTY(SVGStyledElement, HTMLNames::classAttr, String, ClassName, className)
     };
